Reserve space for frame contents to avoid layout shifts

--- a/apollo/assets/styles/sass/50-layouts/_frame.scss
+++ b/apollo/assets/styles/sass/50-layouts/_frame.scss
@@ -12,11 +12,16 @@
 \*------------------------------------*/
 
 .l-frame {
+
+	background-color: $mist-gray;
+	display: block;
 	position: relative;
+
 }
 
 
 .l-frame > * {
+
 	align-items: center;
 	bottom: 0;
 	display: flex;
@@ -26,30 +31,41 @@
 	position: absolute;
 	right: 0;
 	top: 0;
+
 }
 
 
 .l-frame > img,
 .l-frame > video {
+
 	height: 100%;
 	object-fit: cover;
 	width: 100%;
+
 }
 
 
 /* Common aspect ratios */
 .l-frame--16-9 {
+
 	padding-bottom: 56.25%;
+
 }
 
 .l-frame--3-2 {
+
 	padding-bottom: 66.67%;
+
 }
 
 .l-frame--4-3 {
+
 	padding-bottom: 75%;
+
 }
 
 .l-frame--square {
+
 	padding-bottom: 100%;
+
 }
